--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,25 @@ code {
     monospace;
 }
 
+#landingPage{
+  background-color: white;
+}
+
+
+.work 
+{
+  position: relative;
+  top: 20em;
+  background-color: white;
+}
+
+
+.skills
+{
+  position: relative;
+  top: 30px;
+}
+
 .navbar-color
 {
   background-color: #181818;
@@ -95,14 +114,15 @@ nav a:hover
 {
   position: relative;
   top: 10em;
-  box-shadow: 0 0 1.5em rgba(0, 0, 0, 0.1);
-  padding: 50px 50px 100px;
+  box-shadow: 0 0 1.5em rgba(80, 79, 79, 0.1);
+  padding: 50px 50px 50px;
 }
 
 .about-me h1
 {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
+  margin: 0 30px 0;
 }
 
 
@@ -115,7 +135,8 @@ nav a:hover
 {
   color: #ACACAC;
   font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
+  font-size: 17px;
+  padding: 30px 30px 0;
 }
 
 .brand-logo
@@ -138,14 +159,11 @@ nav a:hover
   color: white;
 }
 
-.about
+#about
 {
-  position: absolute;
-  color: #737373;
-  font-size: 10em;
-  font-weight: bold;
-  margin: 5px 50px 50px;
-  opacity: .1;
+  position: relative;
+  top: 1.4em;
+  background-color: rgb(250, 250, 250);
 }
 
 .right img
@@ -154,7 +172,7 @@ nav a:hover
   width: 109vh;
 }
 
-#about_me img
+.about_me img
 {
   position: relative;
   top: 9em;
@@ -182,15 +200,32 @@ nav a:hover
   font-size: 50px;
 }
 
+.about
+{
+  position: relative;
+  top: 70px;
+  text-align: center;
+}
+
+.name-tag-line
+{
+  position: relative;
+  top: 4.5em;
+  margin: 0 auto;
+  width: 8%;
+  height: 4px;
+  background-color: #737373;
+}
+
 .nav li:hover:nth-child(2):hover ~ .line
 {
-  transform: translate(120px);
+  transform: translate(119px);
   transition:  all .4s ease-in-out;
 }
 
 .nav li:hover:nth-child(3):hover ~ .line
 {
-  transform: translate(243px);
+  transform: translate(240px);
   transition:  all .4s ease-in-out;
 }
 
@@ -239,5 +274,139 @@ nav a:hover
   color: #252627;
 }
 
+.circle-wrap {
+  margin: 50px auto;
+  width: 150px;
+  height: 150px;
+  background: #e6e2e7;
+  border-radius: 50%;
+  position: relative;
+  top: 9em;
+}
+
+/*HTML Progress Bar*/
+.circle-wrap .circle .mask,
+.circle-wrap .circle .fill-Html {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  border-radius: 50%;
+}
+
+/*HTML Progress percent*/
+.circle-wrap .circle .mask .fill-Html {
+  clip: rect(0px, 300px, 150px, 0px);
+  background-color: #9F5E60;
+}
+
+.circle-wrap .circle .mask.full,
+.circle-wrap .circle .fill-Html{
+  animation: fill ease-in-out 3s;
+  transform: rotate(126deg);
+}
+/*HTML Progress Bar*/
 
 
+/*Css Progress Bar*/
+.circle-wrap .circle .mask,
+.circle-wrap .circle .fill-CSS {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.circle-wrap .circle .mask .fill-CSS {
+  clip: rect(0px, 150px, 150px, 0px);
+  background-color: #c2185b;
+}
+
+.circle-wrap .circle .mask.full,
+.circle-wrap .circle .fill-CSS{
+  animation: fill ease-in-out 3s;
+  transform: rotate(126deg);
+}
+/*Css Progress Bar*/
+
+/*React Progress Bar*/
+.circle-wrap .circle .mask,
+.circle-wrap .circle .fill-React {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.circle-wrap .circle .mask .fill-React {
+  clip: rect(0px, 75px, 150px, 0px);
+  background-color: #f06292;
+}
+
+.circle-wrap .circle .mask.full,
+.circle-wrap .circle .fill-React{
+  animation: fill ease-in-out 3s;
+  transform: rotate(126deg);
+}
+/*React Progress Bar*/
+
+/*Node Js Progress Bar*/
+.circle-wrap .circle .mask,
+.circle-wrap .circle .fill-Nodejs {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.circle-wrap .circle .mask .fill-Nodejs {
+  clip: rect(0px, 75px, 150px, 0px);
+  background-color: #ef5350;
+}
+
+.circle-wrap .circle .mask.full,
+.circle-wrap .circle .fill-Nodejs{
+  animation: fill ease-in-out 3s;
+  transform: rotate(126deg);
+}
+/*Node Js Progress Bar*/
+
+.circle-wrap .circle .mask {
+  clip: rect(0px, 150px, 150px, 75px);
+}
+
+
+@keyframes fill {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(126deg);
+  }
+}
+
+.circle-wrap .inside-circle {
+  width: 130px;
+  height: 130px;
+  border-radius: 50%;
+  background: #fff;
+  line-height: 130px;
+  text-align: center;
+  margin-top: 10px;
+  margin-left: 10px;
+  position: absolute;
+  z-index: 100;
+  font-weight: 700;
+  font-size: 2em;
+}
+
+.label
+{
+  position: relative;
+  right: 3em;
+}
+
+
+@media only screen and (max-width: 1366px )
+{ 
+  
+}
