--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,13 @@ code {
 {
   position: relative;
   top: 20em;
-  background-color: white;
+  background-color: rgb(250, 250, 250);
+}
+
+#work
+{
+  position: relative;
+  top: 10em;
 }
 
 
@@ -405,6 +411,56 @@ nav a:hover
   right: 3em;
 }
 
+.flex
+{
+  position: relative;
+  width: 50%;
+  display: flex;
+}
+
+.flex-image
+{
+  display: flex;
+}
+
+.img
+{
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay
+{
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color: white;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+
+.flex:hover .overlay
+{
+  bottom: 0;
+  height: 100%;
+}
+
+.text
+{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
 
 @media only screen and (max-width: 1366px )
 { 
