--- a/src/index.css
+++ b/src/index.css
@@ -471,82 +471,15 @@ nav a:hover
 
 .footer
 {
-  position: fixed;
+  position: relative;
+  top: 20em;
 }
 
 .sideBar 
 {
   display: none;
 }
-/*
-@media only screen and (max-width: 482px )
-{ 
-  .right img
-  {
-    display: none;
-  }
 
-  .flex
-  {
-    position: relative;
-    width: 50%;
-    display: flex;
-  }
-
-  .flex-image
-  {
-    display: flex;
-  }
-
-  .img
-  {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
-
-  .overlay
-  {
-    position: absolute;
-    bottom: 100%;
-    left: 0;
-    right: 0;
-    background-color: white;
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: .5s ease;
-  }
-
-  .flex:hover .overlay
-  {
-    bottom: 0;
-    height: 100%;
-  }
-
-  .text
-  {
-    color: black;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-
-}
-
-@media only screen and (max-width: 666px)
-{
-  .right img
-  {
-    display: none;
-  }
-}
-*/
 
 @media only screen and (max-width: 990px)
 {
@@ -616,10 +549,12 @@ nav a:hover
  /*Side bar toggle*/
  .openSideBar
  {
+   position: fixed;
    border: transparent;
    background-color: white;
    display: inline;
    font-size: 30px;
+   z-index: 1;
  }
 
 
@@ -681,15 +616,3 @@ nav a:hover
    /*Side bar toggle*/  
    
 }
-/*
-@media only screen and (max-width: 1125px)
-{
-  .img
-  {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
-
-}
-*/
