--- a/src/index.css
+++ b/src/index.css
@@ -15,14 +15,22 @@ code {
 
 #landingPage{
   background-color: white;
+  margin-bottom: 14.1em;
 }
 
+#landingPage a{
+  text-decoration: none;
+}
 
+#landingPage a:hover{
+  color: #a8a1a1;
+}
 .work 
 {
   position: relative;
   top: 20em;
   background-color: rgb(250, 250, 250);
+  height: 1050px;
 }
 
 .mrg
@@ -67,9 +75,88 @@ nav a:hover
   color: #737373;
 }
 
+.footer
+{
+  position: relative;
+  top: 19em;
+}
+
+.footer p 
+{
+  font-family: 'Montserrat', sans-serif;
+}
+
+.footer span
+{
+  color: rgb(255, 0, 4);
+}
+
 .footer-color
 {
-  background-color: #262626;
+  background-color: #FAFAFA;
+}
+.footer a
+{
+  text-decoration: none;
+  color: rgb(185, 174, 174);
+}
+
+.contact
+{
+  position: relative;
+  top: 18em;
+  text-align: center;
+}
+
+.contact input[type=text]
+{
+  border: none;
+  background-color: rgb(243, 240, 240);
+  padding: 8px;
+}
+
+.contact input[type=email]
+{
+  border: none;
+  background-color: rgb(243, 240, 240);
+  padding: 8px;
+}
+
+.contact textarea
+{
+  position: relative;
+  top: 10em;
+  width: 43.5%;
+  border: none;
+  background-color: rgb(243, 240, 240);
+  padding: 8px;
+}
+
+.contact button
+{
+  position: absolute;
+  z-index: 1;
+  margin: 34em 8.8em 5em;
+  padding: 9px 35px 9px;
+}
+
+.contact p
+{
+  position: relative;
+  top: 6.5em;
+  font-size: large;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.contact span
+{
+  color: rgb(255, 0, 4);
+}
+
+.contact input
+{
+  position: relative;
+  top: 10em;
 }
 
 .par-color
@@ -95,6 +182,7 @@ nav a:hover
   color: #a8a1a1;
   font-family: 'Montserrat', sans-serif;
   position: relative;
+  top: 9em;
   margin: 8em 0;
 }
 
@@ -116,8 +204,23 @@ nav a:hover
 .btn-contact:hover::after
 {
   transform: scaleY(1);
-  
 }
+
+.btn-up
+{
+  position: relative;
+  bottom: 5.5em;
+  background-color: #9F5E60;  
+  color: white;
+  padding: 24px 15px 14px;
+}
+
+.btn-up:hover
+{
+  color: white;
+  background-color: rgb(155, 70, 72); 
+}
+
 
 
 .about-me
@@ -469,11 +572,7 @@ nav a:hover
 }
 /*Work module*/
 
-.footer
-{
-  position: relative;
-  top: 20em;
-}
+
 
 .sideBar 
 {
