--- a/src/index.css
+++ b/src/index.css
@@ -95,17 +95,29 @@ nav a:hover
 {
   background-color: #FAFAFA;
 }
+
 .footer a
 {
   text-decoration: none;
   color: rgb(185, 174, 174);
 }
 
+.footer a:nth-child(1):hover, a:nth-child(2):hover, a:nth-child(3):hover, a:nth-child(4):hover
+{
+    color: #9F5E60;
+}
+
+/*Contacts */
 .contact
 {
   position: relative;
   top: 18em;
   text-align: center;
+}
+
+.contact input[type=text], input[type=email], textarea
+{
+  left: 21em;
 }
 
 .contact input[type=text]
@@ -115,18 +127,12 @@ nav a:hover
   padding: 8px;
 }
 
-.contact input[type=email]
-{
-  border: none;
-  background-color: rgb(243, 240, 240);
-  padding: 8px;
-}
 
 .contact textarea
 {
   position: relative;
   top: 10em;
-  width: 43.5%;
+  width: 480px;
   border: none;
   background-color: rgb(243, 240, 240);
   padding: 8px;
@@ -158,7 +164,7 @@ nav a:hover
   position: relative;
   top: 10em;
 }
-
+/*Contacts */
 .par-color
 {
   color: #585A5C;
@@ -220,8 +226,6 @@ nav a:hover
   color: white;
   background-color: rgb(155, 70, 72); 
 }
-
-
 
 .about-me
 {
@@ -673,7 +677,6 @@ nav a:hover
     display: block;
   }
 
-
   @keyframes slide-open {
     100%{
       left: 0;
@@ -691,10 +694,6 @@ nav a:hover
      margin: 0 2em 0;                                              
    }     
 
-   .closebtn
-   {
-     left: -100%;
-   }
 
    .sideBar .closebtn
    {
@@ -713,5 +712,76 @@ nav a:hover
      padding: 16px;
    }
    /*Side bar toggle*/  
-   
+
+
+  .footer
+  {
+    position: relative;
+    top: 38em;
+  }
+
+   /*Contacts*/
+  .contact
+  {
+    position: relative;
+    top: 55em;
+    text-align: center;
+  }
+
+  .contact input[type=text], input[type=email], textarea
+  {
+  left: 0em;
+  }
+
+  .contact input[type=text]
+  {
+    border: none;
+    background-color: rgb(243, 240, 240);
+    padding: 8px;
+  }
+
+  .contact input[type=email]
+  {
+    border: none;
+    background-color: rgb(243, 240, 240);
+    padding: 8px;
+  }
+
+  .contact textarea
+  {
+    position: relative;
+    top: 10em;
+    width: 480px;
+    border: none;
+    background-color: rgb(243, 240, 240);
+    padding: 8px;
+  }
+
+  .contact button
+  {
+    position: absolute;
+    z-index: 1;
+    margin: 34em 8.8em 5em;
+    padding: 9px 35px 9px;
+  }
+
+  .contact p
+  {
+    position: relative;
+    top: 6.5em;
+    font-size: large;
+    font-family: 'Montserrat', sans-serif;
+  }
+
+  .contact span
+  {
+    color: rgb(255, 0, 4);
+  }
+
+  .contact input
+  {
+    position: relative;
+    top: 10em;
+  }
+  /*Contacts*/
 }
