--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,6 +25,7 @@ code {
 #landingPage a:hover{
   color: #a8a1a1;
 }
+
 .work 
 {
   position: relative;
@@ -134,6 +135,7 @@ nav a:hover
   top: 10em;
   width: 480px;
   border: none;
+  -webkit-max-logical-width: 477px;
   background-color: rgb(243, 240, 240);
   padding: 8px;
 }
@@ -233,6 +235,9 @@ nav a:hover
   top: 10em;
   box-shadow: 0 0 1.5em rgba(80, 79, 79, 0.1);
   padding: 50px 50px 50px;
+  -webkit-padding-end: 50px;
+  -webkit-padding-start: 60px;
+  -webkit-padding-before: 80px;
   margin-bottom: 16em;
 }
 
@@ -280,14 +285,9 @@ nav a:hover
 #about
 {
   position: relative;
-  top: 1.4em;
   background-color: rgb(250, 250, 250);
-}
-
-.right img
-{
-  height: 100vh;
-  width: 109vh;
+  -webkit-margin-before: 15.5em;
+  top: 2em;
 }
 
 .about_me img
@@ -296,6 +296,13 @@ nav a:hover
   top: 9em;
   height: 95vh;
   width: 95vh;
+}
+
+.right img
+{
+  height: 100vh;
+  width: 109vh;
+  -webkit-max-logical-width: 103.5vh;
 }
 
 .left img
@@ -576,212 +583,9 @@ nav a:hover
 }
 /*Work module*/
 
-
-
 .sideBar 
 {
   display: none;
 }
 
 
-@media only screen and (max-width: 990px)
-{
-  .right img
-  {
-    display: none;
-  }
-
-  .img-about  
-  {
-    display: none;
-  }
-
-  /*Work module*/
-  .flex
-  {
-    flex: 50%;
-    pad: 0 4px;
-  }
-
-  .flex-image
-  {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .img
-  {
-    display: flex;
-    width: 100%;
-    height: auto;
-  }
-
-  .overlay
-  {
-    position: absolute;
-    bottom: 100%;
-    left: 0;
-    right: 0;
-    background-color: white;
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: .5s ease;
-  }
-
-  .flex:hover .overlay
-  {
-    bottom: 0;
-    height: 100%;
-  }
-
-  .text
-  {
-    color: black;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
- /*Work module*/
-
- /*Side bar toggle*/
- .openSideBar
- {
-   position: fixed;
-   border: transparent;
-   background-color: white;
-   display: inline;
-   font-size: 30px;
-   z-index: 1;
- }
-
-
-  .sideBar
-  {
-    height: 100vh;
-    width: 300px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: -100%;
-    background-color: #ffffff;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-    animation: slide-open 0.6s forwards;
-    display: block;
-  }
-
-  @keyframes slide-open {
-    100%{
-      left: 0;
-    }
-  }
-
-  .sideBar a
-   {
-     padding: 8px 8px 8px 8px;
-     text-decoration: none;
-     font-size: 25px;
-     color: #212529;
-     display: block;
-     transform: 0.3s;      
-     margin: 0 2em 0;                                              
-   }     
-
-
-   .sideBar .closebtn
-   {
-      position: absolute;
-      top: 0;
-      right: 0;
-      font-size: 36px;
-      left: 200px;
-      border: none;
-      background-color: #ffffff;
-   }
-
-   .toggle
-   {
-     transition: margin-left .5s;
-     padding: 16px;
-   }
-   /*Side bar toggle*/  
-
-
-  .footer
-  {
-    position: relative;
-    top: 38em;
-  }
-
-   /*Contacts*/
-  .contact
-  {
-    position: relative;
-    top: 55em;
-    text-align: center;
-  }
-
-  .contact input[type=text], input[type=email], textarea
-  {
-  left: 0em;
-  }
-
-  .contact input[type=text]
-  {
-    border: none;
-    background-color: rgb(243, 240, 240);
-    padding: 8px;
-  }
-
-  .contact input[type=email]
-  {
-    border: none;
-    background-color: rgb(243, 240, 240);
-    padding: 8px;
-  }
-
-  .contact textarea
-  {
-    position: relative;
-    top: 10em;
-    width: 480px;
-    border: none;
-    background-color: rgb(243, 240, 240);
-    padding: 8px;
-  }
-
-  .contact button
-  {
-    position: absolute;
-    z-index: 1;
-    margin: 34em 8.8em 5em;
-    padding: 9px 35px 9px;
-  }
-
-  .contact p
-  {
-    position: relative;
-    top: 6.5em;
-    font-size: large;
-    font-family: 'Montserrat', sans-serif;
-  }
-
-  .contact span
-  {
-    color: rgb(255, 0, 4);
-  }
-
-  .contact input
-  {
-    position: relative;
-    top: 10em;
-  }
-  /*Contacts*/
-}
