--- a/src/css/index.css
+++ b/src/css/index.css
@@ -129,7 +129,6 @@ nav a:hover
   padding: 8px;
 }
 
-
 .contact textarea
 {
   position: relative;
@@ -255,10 +254,9 @@ textarea
   margin: 0 30px 0;
 }
 
-
-.about-me h1:nth-child(3)
+.about-me h1:nth-child(2)
 {
-  padding: 0 0 20px;
+  padding: 0 0 40px;
 }
 
 .about-me p
@@ -266,7 +264,7 @@ textarea
   color: #ACACAC;
   font-family: 'Montserrat', sans-serif;
   font-size: 17px;
-  padding: 30px 30px 0;
+  padding: 0px 30px 0;
 }
 
 .brand-logo
@@ -311,6 +309,7 @@ textarea
 {
   height: auto;
   width: 662px;
+  /*box-shadow: 0 5em 1.5em rgba(80, 79, 79, 0.1);*/
   -webkit-max-logical-width:  103.5vh;
 }
 
@@ -416,6 +415,7 @@ textarea
   border-radius: 50%;
   position: relative;
   top: 9em;
+  
 }
 
 /*HTML Progress Bar*/
