adding projects to portfolio

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -317,6 +317,7 @@ textarea
   height: 30%;
   opacity: .5;
   color: white;
+
 }
 
 #about
@@ -624,6 +625,7 @@ textarea
   display: block;
   width: 100%;
   height: auto;
+  object-fit: cover;
 }
 
 .overlay
